Closed
Bug 709971
Opened 13 years ago
Closed 13 years ago
reflow telemetry
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: taras.mozilla, Assigned: froydnj)
References
Details
(Whiteboard: [Snappy:P1])
Attachments
(1 file, 1 obsolete file)
|
1.76 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
Bug 681535 added xul telemetry. Lets also add html reflow telemetry. This time do not report 0ms reflows. We need this to see how often we encounter pages that stall the browser in layout.
Comment 1•13 years ago
|
||
I'd appreciate it if you build on top of the patches in bug 709256!
| Assignee | ||
Comment 2•13 years ago
|
||
Is it worth doing something like what we did in bug 699051 by sending back URLs that take longer than $MAX_TIME in reflow? (Possibly with MAX_TIME calculated based on some timing cleverness.)
Obviously there are significant privacy implications to doing that, but I'm not sure knowing "hey, 5% of pages stall the browser for longer than 5s" is going to help us that much, as we don't have STR from that data. Willing to be corrected by the layout guys!
| Reporter | ||
Comment 3•13 years ago
|
||
(In reply to Nathan Froyd (:froydnj) from comment #2)
> Is it worth doing something like what we did in bug 699051 by sending back
> URLs that take longer than $MAX_TIME in reflow? (Possibly with MAX_TIME
> calculated based on some timing cleverness.)
It would be cool, but sending back URL(or anything related to URL) is not going to fly
| Reporter | ||
Comment 4•13 years ago
|
||
Also good point about 5% of pages, can't skip 0ms reflows in this case.
| Assignee | ||
Comment 5•13 years ago
|
||
(In reply to Taras Glek (:taras) from comment #3)
> (In reply to Nathan Froyd (:froydnj) from comment #2)
> > Is it worth doing something like what we did in bug 699051 by sending back
> > URLs that take longer than $MAX_TIME in reflow? (Possibly with MAX_TIME
> > calculated based on some timing cleverness.)
>
> It would be cool, but sending back URL(or anything related to URL) is not
> going to fly
OK, then what can we do once these numbers are in hand? Plot them for Talos (or similar measures) tests? I'm not seeing how having just reflow ms in isolation is going to help us.
| Assignee | ||
Comment 6•13 years ago
|
||
Simple enough, I guess.
Attachment #587363 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 7•13 years ago
|
||
Attachment #587363 -
Attachment is obsolete: true
Attachment #587363 -
Flags: review?(bzbarsky)
Attachment #587365 -
Flags: review?(bzbarsky)
Comment 8•13 years ago
|
||
Comment on attachment 587365 [details] [diff] [review]
HTML reflow telemetry
r=me
Attachment #587365 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
| Reporter | ||
Comment 9•13 years ago
|
||
Boris, how hard would it be to track reflow in background tabs?
Comment 10•13 years ago
|
||
In what sense? The presshell knows whether it's in a background tab....
| Reporter | ||
Comment 11•13 years ago
|
||
(In reply to Boris Zbarsky (:bz) from comment #10)
> In what sense? The presshell knows whether it's in a background tab....
that's what I wanted. I would like to know how much jank is caused by reflows in background tabs
Comment 12•13 years ago
|
||
The mIsActive member of presshell should be what you want, then. Presumably just log reflows when !mIsActive to a separate histogram?
Comment 13•13 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla12
Comment 14•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•