Bug 709971 - HTML reflow telemetry; r=bz